--- a/noticias.html
+++ b/noticias.html
@@ -27,144 +27,189 @@
     </header>
     <main>
     <!-- section#4-->
-    <section>
-      <div class="bloque parallax cover-12"></div>
-      <div class="bloque">
-        <div class="container-fluid">
-          <div class="d-grid grid-list-container-news">
-            <div class="card">
-              <img src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/er-thumbnail-colosseum-thumbnail.png?twic=v1/resize=1210/step=10/quality=80" alt="Avatar" style="width:100%">
-            <div class="container-card bg-dorado">
-              <div class="course-info">
-                <h6>07 Diciembre 2022</h6>
-                <h5>ELDEN RING <br /> ¡Ya disponible la Actualización gratuita del Coliseo!</h5>
+      <section>
+        <div class="bloque parallax cover-12"></div>
+        <div class="bloque">
+          <div class="container-fluid">
+            <div class="d-grid grid-list-container-news">
+              <div class="card">
+                <img src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/er-thumbnail-colosseum-thumbnail.png?twic=v1/resize=1210/step=10/quality=80" alt="Avatar" style="width:100%">
+              <div class="container-card bg-dorado">
+                <div class="course-info">
+                  <h6>07 Diciembre 2022</h6>
+                  <h5>ELDEN RING <br /> ¡Ya disponible la Actualización gratuita del Coliseo!</h5>
+                </div>
               </div>
             </div>
-          </div>
-          <div>
-            <article>
-              <div class="courses-container">
-                <div class="course">
-                  <div class="course-preview">
-                    <img src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/ER-Isarel_trailer_thumbnail.jpg?twic=v1/cover=1220x686/step=10/quality=80" alt="Avatar" style="width:100%">
-                  </div>
-                  <div class="course-info">
-                    <h6>07 Diciembre 2022</h6>
-                    <h5>ELDEN RING <br /> ¡Ya disponible la Actualización gratuita del Coliseo!</h5>
-                  </div>
-                </div>
-              </div>
-            </article>
-            <article>
-              <div class="courses-container">
-                <div class="course">
-                  <div class="course-preview">
-                    <img src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/ER-Isarel_trailer_thumbnail.jpg?twic=v1/cover=1220x686/step=10/quality=80" alt="Avatar" style="width:100%">
-                  </div>
-                  <div class="course-info">
-                    <h6>07 Diciembre 2022</h6>
-                    <h5>ELDEN RING <br /> ¡Ya disponible la Actualización gratuita del Coliseo!</h5>
+            <div>
+              <article>
+                <div class="courses-container">
+                  <div class="course">
+                    <div class="course-preview">
+                      <img src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/ER-Isarel_trailer_thumbnail.jpg?twic=v1/cover=1220x686/step=10/quality=80" alt="Avatar" style="width:100%">
+                    </div>
+                    <div class="course-info">
+                      <h6>07 Diciembre 2022</h6>
+                      <h5>ELDEN RING <br /> ¡Ya disponible la Actualización gratuita del Coliseo!</h5>
+                    </div>
                   </div>
                 </div>
-              </div>
-            </article>
-            <article>
-              <div class="courses-container">
-                <div class="course">
-                  <div class="course-preview">
-                    <img src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/ER-Isarel_trailer_thumbnail.jpg?twic=v1/cover=1220x686/step=10/quality=80" alt="Avatar" style="width:100%">
-                  </div>
-                  <div class="course-info">
-                    <h6>07 Diciembre 2022</h6>
-                    <h5>ELDEN RING <br /> ¡Ya disponible la Actualización gratuita del Coliseo!</h5>
-                  </div>
-                </div>
-              </div>
-            </article>
-            <article>
-              <div class="courses-container">
-                <div class="course">
-                  <div class="course-preview">
-                    <img src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/ER-Isarel_trailer_thumbnail.jpg?twic=v1/cover=1220x686/step=10/quality=80" alt="Avatar" style="width:100%">
-                  </div>
-                  <div class="course-info">
-                    <h6>07 Diciembre 2022</h6>
-                    <h5>ELDEN RING <br /> ¡Ya disponible la Actualización gratuita del Coliseo!</h5>
+              </article>
+              <article>
+                <div class="courses-container">
+                  <div class="course">
+                    <div class="course-preview">
+                      <img src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/ER-Isarel_trailer_thumbnail.jpg?twic=v1/cover=1220x686/step=10/quality=80" alt="Avatar" style="width:100%">
+                    </div>
+                    <div class="course-info">
+                      <h6>07 Diciembre 2022</h6>
+                      <h5>ELDEN RING <br /> ¡Ya disponible la Actualización gratuita del Coliseo!</h5>
+                    </div>
                   </div>
                 </div>
-              </div>
-            </article>
-            <article>
-              <div class="courses-container">
-                <div class="course">
-                  <div class="course-preview">
-                    <img src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/ER-Isarel_trailer_thumbnail.jpg?twic=v1/cover=1220x686/step=10/quality=80" alt="Avatar" style="width:100%">
-                  </div>
-                  <div class="course-info">
-                    <h6>07 Diciembre 2022</h6>
-                    <h5>ELDEN RING <br /> ¡Ya disponible la Actualización gratuita del Coliseo!</h5>
+              </article>
+              <article>
+                <div class="courses-container">
+                  <div class="course">
+                    <div class="course-preview">
+                      <img src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/ER-Isarel_trailer_thumbnail.jpg?twic=v1/cover=1220x686/step=10/quality=80" alt="Avatar" style="width:100%">
+                    </div>
+                    <div class="course-info">
+                      <h6>07 Diciembre 2022</h6>
+                      <h5>ELDEN RING <br /> ¡Ya disponible la Actualización gratuita del Coliseo!</h5>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="text-center py-1">
-                <button class="btn"> ver </button>
-              </div>
-            </article>
-    </section>
-   
-    <!--section#6-->
-    <section>
-      <div class="bloque parallax cover-6" id="soporte"></div>
-      <div class="bloque">
-        <div class="container-fluid">
-          <div class="box1 px-1 ">
-            <div class="box-suscripto py-3 color-dorado">
-              <h3>¿Necesitas ayuda?</h3>
-              <h4> ¡Puede que tengamos una solución para ti!</h4>
-              <div class="py-3">
-                <a href=""><button class="btn">PREGUNTA AL EQUIPO DE SOPORTE</button></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-     <!--section#5-->
-     <section>
-      <div class="bloque parallax cover-5" id="redesSociales"></div>
-      <div class="bloque">
-        <div class="container-fluid">
-          <div class="justify-content">
-            <div class="box1 px-1">
+              </article>
+              <article>
+                <div class="courses-container">
+                  <div class="course">
+                    <div class="course-preview">
+                      <img src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/ER-Isarel_trailer_thumbnail.jpg?twic=v1/cover=1220x686/step=10/quality=80" alt="Avatar" style="width:100%">
+                    </div>
+                    <div class="course-info">
+                      <h6>07 Diciembre 2022</h6>
+                      <h5>ELDEN RING <br /> ¡Ya disponible la Actualización gratuita del Coliseo!</h5>
+                    </div>
+                  </div>
+                </div>
+              </article>
+              <article>
+                <div class="courses-container">
+                  <div class="course">
+                    <div class="course-preview">
+                      <img src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/ER-Isarel_trailer_thumbnail.jpg?twic=v1/cover=1220x686/step=10/quality=80" alt="Avatar" style="width:100%">
+                    </div>
+                    <div class="course-info">
+                      <h6>07 Diciembre 2022</h6>
+                      <h5>ELDEN RING <br /> ¡Ya disponible la Actualización gratuita del Coliseo!</h5>
+                    </div>
+                  </div>
+                </div>
+                <div class="text-center py-1">
+                  <button class="btn"> ver </button>
+                </div>
+              </article>
+      </section>
+    
+      <!--section#6-->
+      <section>
+        <div class="bloque parallax cover-6" id="soporte"></div>
+        <div class="bloque">
+          <div class="container-fluid">
+            <div class="box1 px-1 ">
               <div class="box-suscripto py-3 color-dorado">
-                <h2 class="">No te pierdas de ninguna noticia</h2>
-                <h3> Recibe las ultimas actualizaciones de tus juegos favoritos</h3>
+                <h3>¿Necesitas ayuda?</h3>
+                <h4> ¡Puede que tengamos una solución para ti!</h4>
                 <div class="py-3">
-                  <div class="text-center">
-                    <input class="input-suscribirse" type="text"> <button class="btn" type="button">ME SUSCRIBO!</button>
-                  </div>
+                  <a href="https://service-es.bandainamcoent.eu/app/list/p/7916/" target="_blank"><button class="btn">PREGUNTA AL EQUIPO DE SOPORTE</button></a>
                 </div>
               </div>
             </div>
-            <div class=" box2 px-1 bg-dorado-transparent">
-              <div class="box-suscripto py-3 color-dorado">
-                <h2>Síguenos</h2>
-                <h3>Forma parte de la comunidad. </h3>
-                <div class="iconos-flex py-3">
-                  <div>
-                    <a href="">
-                      <img class="iconos-item " src="./assets/icons/face.png" alt="Avatar" style="width:100%">
-                    </a>
+          </div>
+        </div>
+      </section>
+      <!--section#5-->
+      <section>
+        <div class="bloque parallax cover-5" id="redesSociales"></div>
+        <div class="bloque">
+          <div class="container-fluid">
+            <div class="justify-content">
+              <div class="box1 px-1">
+                <div class="box-suscripto py-3 color-dorado text-center">
+                  <h2 >No te pierdas de ninguna noticia</h2>
+                  <h3> Recibe las ultimas actualizaciones de tus juegos favoritos</h3>
+                  <div class="py-3">
+                    <div class="text-center">
+                      <input class="input-suscribirse" type="text"> <button class="btn btn-padding" type="button">ME SUSCRIBO!</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class=" box2 px-1 bg-dorado-transparent">
+                <div class="box-suscripto py-3 color-dorado">
+                  <h2>Síguenos</h2>
+                  <h3>Forma parte de la comunidad. </h3>
+                  <div class="iconos-flex py-3">
+                    <div>
+                      <a href="https://www.facebook.com/bandainamcolatinoamerica/?brand_redir=233213603406398" target="_blank">
+                        <img class="iconos-item" src="./assets/icons/face.png" alt="facebook" style="width:100%">
+                      </a>
+                      <a href="https://www.instagram.com/bandainamcous/" target="_blank">
+                        <img class="iconos-item" src="./assets/icons/instagram.png" alt="instagram" style="width:100%">
+                      </a>
+                      <a href="https://twitter.com/bandainamcoeu/" target="_blank">
+                        <img class="iconos-item"  src="./assets/icons/twitter.png" alt="twitter" style="width:100%">
+                      </a>
+                      <a href="https://www.youtube.com/user/NamcoBandaiGamesEU" target="_blank">
+                        <img class="iconos-item" src="./assets/icons/youtube.png" alt="youtube" style="width:100%">
+                      </a>
+                      <a href="https://discord.com/invite/eldenring" target="_blank">
+                        <img class="iconos-item" src="./assets/icons/discord.png" alt="discord" style="width:100%">
+                      </a>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-    <footer class="text-center">Footer</footer>
+      </section>
+      <footer class="footer pie-pagina">
+        <div class="grupo-1">
+            <div class="box">
+                <figure>
+                    <a href="#">
+                      <img class="logo-footer" src="./assets/img/titlecel.jpg" alt="Elden Ring logo">
+                    </a>
+                </figure>
+            </div>
+            <div class="box text-center">
+              <ul class="">
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./noticias.html">Noticias</a></li>
+                <li><a href="./historia.html">Historia</a></li>
+                <li><a href="./store.html">Store</a></li>
+                <li><a href="./requisitos.html">Requisitos</a></li>
+            </ul>
+            </div>
+            <div class="box text-center">
+                <h2>SIGUENOS</h2>
+                <div class="red-social">
+                    <a href="https://www.facebook.com/bandainamcolatinoamerica/?brand_redir=233213603406398" target="_blank" class="fa fa-facebook"></a>
+                    <a href="https://www.instagram.com/bandainamcous/" target="_blank" class="fa fa-instagram"></a>
+                    <a href="https://twitter.com/bandainamcoeu/" target="_blank" class="fa fa-twitter"></a>
+                    <a href="https://www.youtube.com/user/NamcoBandaiGamesEU" target="_blank" class="fa fa-youtube"></a>
+                </div>
+            </div>
+        </div>
+        <div class="grupo-2">
+            <small>&copy; 2023 <b>Rolling Code</b> - Todos los Derechos Reservados.</small>
+        </div>
+    </footer>
     </main>
   </body>
   <script src="./js/index.js"></script>
+    <!--Iconos Fontawesome-->
+    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
 </html>
