--- a/requisitos.html
+++ b/requisitos.html
@@ -4,104 +4,236 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style.css" />
     <title>Elden Ring</title>
   </head>
   <body>
     <header class="header">
       <!-- Logo -->
-      <a  href="./index.html"><img class="logo-nav" src="./assets/img/titlecel.jpg" alt="Elden Ring logo"></a>
+      <a href="./index.html"
+        ><img
+          class="logo-nav"
+          src="./assets/img/titlecel.jpg"
+          alt="Elden Ring logo"
+      /></a>
       <!-- Hamburger icon -->
-      <input class="side-menu" type="checkbox" id="side-menu"/>
-      <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
+      <input class="side-menu" type="checkbox" id="side-menu" />
+      <label class="hamb" for="side-menu"
+        ><span class="hamb-line"></span
+      ></label>
       <!-- Menu -->
       <nav class="nav">
-          <ul class="menu">
-              <li><a href="./index.html">Home</a></li>
-              <li><a href="./noticias.html">Noticias</a></li>
-              <li><a href="./historia.html">Historia</a></li>
-              <li><a href="./store.html">Store</a></li>
-              <li><a href="./requisitos.html">Requisitos</a></li>
-          </ul>
+        <ul class="menu">
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./noticias.html">Noticias</a></li>
+          <li><a href="./historia.html">Historia</a></li>
+          <li><a href="./store.html">Store</a></li>
+          <li><a href="./requisitos.html">Requisitos</a></li>
+        </ul>
       </nav>
     </header>
     <main>
-    <!--section#4-->
-    <section>
-      <div class="bloque parallax cover-9"></div>
-      <div class="bloque">
-        <h2 class="text-center color-dorado py-1">Requisitos</h2>
+      <section>
+        <div class="bloque parallax cover-9"></div>
+        <div class="bloque">
+          <h2 class="text-center color-dorado py-1">Requisitos</h2>
           <div class="d-grid grid-list-container-news">
-              <div class="card-requisitos">
-                  <h2 class="text-center color-dorado py-1">Minimo</h2>
-                  <ul class="py-1">
-                      <li>OS: Windows 10</li>
-                      <li>Processor: Intel Core i5-8400 | AMD RYZEN 3 3300X</li>
-                      <li>Memory: 12 GB RAM</li>
-                      <li>Graphics: Nvidia GeForce GTX 1060, 3 GB | AMD Radeon RX 580, 4 GB</li>
-                      <li>DirectX: Version 12 (Feature Level 12.0)</li>
-                      <li>Storage: 60 GB available space</li>
-                      <li>Sound Card: Windows-Compatible Audio device</li>
-                  </ul>
-                  <div class="text-center color-blanco py-3">
-                      <i>Current specs are valid for launch day and may be updated in the future.</i>
-                  </div>
-
+            <div class="card-requisitos">
+              <h2 class="text-center color-dorado py-1">Minimo</h2>
+              <ul class="py-1">
+                <li>OS: Windows 10</li>
+                <li>Processor: Intel Core i5-8400 | AMD RYZEN 3 3300X</li>
+                <li>Memory: 12 GB RAM</li>
+                <li>
+                  Graphics: Nvidia GeForce GTX 1060, 3 GB | AMD Radeon RX 580, 4
+                  GB
+                </li>
+                <li>DirectX: Version 12 (Feature Level 12.0)</li>
+                <li>Storage: 60 GB available space</li>
+                <li>Sound Card: Windows-Compatible Audio device</li>
+              </ul>
+              <div class="text-center color-blanco py-3">
+                <i
+                  >Current specs are valid for launch day and may be updated in
+                  the future.</i
+                >
               </div>
-              <div class="card-requisitos">
-                  <h2 class="text-center color-dorado py-1">Recomendado</h2>
-                  <ul class="py-1">
-                      <li>OS: Windows 11/10</li>
-                      <li>Processor: Intel Core i7-8700K | AMD Ryzen 5 3600X</li>
-                      <li>Memory: 16 GB RAM</li>
-                      <li>Graphics: Nvidia GeForce GTX 1070, 8 GB | AMD Radeon RX VEGA 56, 8 GB</li>
-                      <li>DirectX: Version 12 (Feature Level 12.0)</li>
-                      <li>Storage: 60 GB available space</li>
-                      <li>Sound Card: Windows-Compatible Audio device</li>
-                  </ul>
-                  <div class="text-center color-blanco py-3">
-                      <i>Current specs are valid for launch day and may be updated in the future.</i>
-                  </div>
-
+            </div>
+            <div class="card-requisitos">
+              <h2 class="text-center color-dorado py-1">Recomendado</h2>
+              <ul class="py-1">
+                <li>OS: Windows 11/10</li>
+                <li>Processor: Intel Core i7-8700K | AMD Ryzen 5 3600X</li>
+                <li>Memory: 16 GB RAM</li>
+                <li>
+                  Graphics: Nvidia GeForce GTX 1070, 8 GB | AMD Radeon RX VEGA
+                  56, 8 GB
+                </li>
+                <li>DirectX: Version 12 (Feature Level 12.0)</li>
+                <li>Storage: 60 GB available space</li>
+                <li>Sound Card: Windows-Compatible Audio device</li>
+              </ul>
+              <div class="text-center color-blanco py-3">
+                <i
+                  >Current specs are valid for launch day and may be updated in
+                  the future.</i
+                >
               </div>
+            </div>
           </div>
-  </section>
-    <!--section#5-->
-    <section>
-      <div class="bloque parallax cover-8" id="redesSociales"></div>
-      <div class="bloque">
-        <div class="container-fluid">
-          <div class="justify-content">
-            <div class="box1 px-1">
-              <div class="box-suscripto py-3 color-dorado">
-                <h2 class="">No te pierdas de ninguna noticia</h2>
-                <h3> Recibe las ultimas actualizaciones de tus juegos favoritos</h3>
-                <div class="py-3">
-                  <div class="text-center">
-                    <input class="input-suscribirse" type="text"> <button class="btn" type="button">ME SUSCRIBO!</button>
+        </div>
+      </section>
+      <section>
+        <div class="bloque parallax cover-5" id="redesSociales"></div>
+        <div class="bloque">
+          <div class="container-fluid">
+            <div class="justify-content">
+              <div class="box1 px-1">
+                <div class="box-suscripto py-3 color-dorado text-center">
+                  <h2>No te pierdas de ninguna noticia</h2>
+                  <h3>
+                    Recibe las ultimas actualizaciones de tus juegos favoritos
+                  </h3>
+                  <div class="py-3">
+                    <div class="text-center">
+                      <input class="input-suscribirse" type="text" />
+                      <button class="btn btn-padding" type="button">
+                        ME SUSCRIBO!
+                      </button>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class=" box2 px-1 bg-dorado-transparent">
-              <div class="box-suscripto py-3 color-dorado">
-                <h2>Síguenos</h2>
-                <h3>Forma parte de la comunidad. </h3>
-                <div class="iconos-flex py-3">
-                  <div>
-                    <a href="">
-                      <img class="iconos-item " src="./assets/icons/face.png" alt="Avatar" style="width:100%">
-                    </a>
+              <div class="box2 px-1 bg-dorado-transparent">
+                <div class="box-suscripto py-3 color-dorado">
+                  <h2>Síguenos</h2>
+                  <h3>Forma parte de la comunidad.</h3>
+                  <div class="iconos-flex py-3">
+                    <div>
+                      <a
+                        href="https://www.facebook.com/bandainamcolatinoamerica/?brand_redir=233213603406398"
+                        target="_blank"
+                      >
+                        <img
+                          class="iconos-item"
+                          src="./assets/icons/face.png"
+                          alt="facebook"
+                          style="width: 100%"
+                        />
+                      </a>
+                      <a
+                        href="https://www.instagram.com/bandainamcous/"
+                        target="_blank"
+                      >
+                        <img
+                          class="iconos-item"
+                          src="./assets/icons/instagram.png"
+                          alt="instagram"
+                          style="width: 100%"
+                        />
+                      </a>
+                      <a
+                        href="https://twitter.com/bandainamcoeu/"
+                        target="_blank"
+                      >
+                        <img
+                          class="iconos-item"
+                          src="./assets/icons/twitter.png"
+                          alt="twitter"
+                          style="width: 100%"
+                        />
+                      </a>
+                      <a
+                        href="https://www.youtube.com/user/NamcoBandaiGamesEU"
+                        target="_blank"
+                      >
+                        <img
+                          class="iconos-item"
+                          src="./assets/icons/youtube.png"
+                          alt="youtube"
+                          style="width: 100%"
+                        />
+                      </a>
+                      <a
+                        href="https://discord.com/invite/eldenring"
+                        target="_blank"
+                      >
+                        <img
+                          class="iconos-item"
+                          src="./assets/icons/discord.png"
+                          alt="discord"
+                          style="width: 100%"
+                        />
+                      </a>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-    <footer class="text-center">Footer</footer>
+      </section>
+      <footer class="footer pie-pagina">
+        <div class="grupo-1">
+          <div class="box">
+            <figure>
+              <a href="#">
+                <img
+                  class="logo-footer"
+                  src="./assets/img/titlecel.jpg"
+                  alt="Elden Ring logo"
+                />
+              </a>
+            </figure>
+          </div>
+          <div class="box text-center">
+            <ul class="">
+              <li><a href="./index.html">Home</a></li>
+              <li><a href="./noticias.html">Noticias</a></li>
+              <li><a href="./historia.html">Historia</a></li>
+              <li><a href="./store.html">Store</a></li>
+              <li><a href="./requisitos.html">Requisitos</a></li>
+            </ul>
+          </div>
+          <div class="box text-center">
+            <h2>SIGUENOS</h2>
+            <div class="red-social">
+              <a
+                href="https://www.facebook.com/bandainamcolatinoamerica/?brand_redir=233213603406398"
+                target="_blank"
+                class="fa fa-facebook"
+              ></a>
+              <a
+                href="https://www.instagram.com/bandainamcous/"
+                target="_blank"
+                class="fa fa-instagram"
+              ></a>
+              <a
+                href="https://twitter.com/bandainamcoeu/"
+                target="_blank"
+                class="fa fa-twitter"
+              ></a>
+              <a
+                href="https://www.youtube.com/user/NamcoBandaiGamesEU"
+                target="_blank"
+                class="fa fa-youtube"
+              ></a>
+            </div>
+          </div>
+        </div>
+        <div class="grupo-2">
+          <small
+            >&copy; 2023 <b>Rolling Code</b> - Todos los Derechos
+            Reservados.</small
+          >
+        </div>
+      </footer>
     </main>
   </body>
   <script src="./js/index.js"></script>
+  <!--Iconos Fontawesome-->
+  <script
+    src="https://kit.fontawesome.com/eb496ab1a0.js"
+    crossorigin="anonymous"
+  ></script>
 </html>
