--- a/store.html
+++ b/store.html
@@ -26,79 +26,193 @@
       </nav>
     </header>
     <main>
-    <!--section#4-->
-    <section>
-      <div class="bloque parallax cover-10"></div>
+      <section>
+        <div class="bloque parallax cover-10"></div>
+          <div class="bloque">
+            <div class="container-fluid">
+              <div class="justify-content">
+                <div class="box1 px-1 bg-dorado-transparent">
+                  <div class="box-suscripto py-3 color-dorado">
+                    <div class="d-grid grid-list-container-store">
+                      <div class="text-center">
+                        <img class="bandai-store-imagen-icon" src="./assets/img/bandaistore.png" alt="Avatar">
+                        <h3>¡Productos exclusivos de tus universos favoritos!</h3>
+                        <img class=" bandai-store-imagen" src="./assets/img/merchan1.jpg" alt="Avatar">
+                        <div class="py-3">
+                          <a href=""> <button class="btn"> Ver tienda oficial</button></a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class=" box2 px-1 ">
+                  <div class="box-suscripto py-3 color-dorado">
+                    <div class="d-grid grid-list-container-store">
+                      <div class="text-center">
+                        <img class=" bandai-store-imagen-icon" src="./assets/img/bandaipng.png" alt="Avatar">
+                        <h3>¡Cambia tus puntos en nuestro club de recompensas EP!C !</h3>
+                        <img class="bandai-store-imagen" src="./assets/img/bandaiepicmerch.png" alt="Avatar">
+                        <div class="py-3">
+                          <a href=""> <button class="btn"> Ver tienda oficial</button></a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+      </section>
+      <section>
+        <div class="bloque parallax cover-5" id="redesSociales"></div>
         <div class="bloque">
           <div class="container-fluid">
             <div class="justify-content">
-              <div class="box1 px-1 bg-dorado-transparent">
-                <div class="box-suscripto py-3 color-dorado">
-                  <div class="d-grid grid-list-container-store">
+              <div class="box1 px-1">
+                <div class="box-suscripto py-3 color-dorado text-center">
+                  <h2>No te pierdas de ninguna noticia</h2>
+                  <h3>
+                    Recibe las ultimas actualizaciones de tus juegos favoritos
+                  </h3>
+                  <div class="py-3">
                     <div class="text-center">
-                      <img class="bandai-store-imagen-icon" src="./assets/img/bandaistore.png" alt="Avatar">
-                      <h3>¡Productos exclusivos de tus universos favoritos!</h3>
-                      <img class=" bandai-store-imagen" src="./assets/img/merchan1.jpg" alt="Avatar">
-                      <div class="py-3">
-                        <a href=""> <button class="btn"> Ver tienda oficial</button></a>
-                      </div>
+                      <input class="input-suscribirse" type="text" />
+                      <button class="btn btn-padding" type="button">
+                        ME SUSCRIBO!
+                      </button>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class=" box2 px-1 ">
+              <div class="box2 px-1 bg-dorado-transparent">
                 <div class="box-suscripto py-3 color-dorado">
-                  <div class="d-grid grid-list-container-store">
-                    <div class="text-center">
-                      <img class=" bandai-store-imagen-icon" src="./assets/img/bandaipng.png" alt="Avatar">
-                      <h3>¡Cambia tus puntos en nuestro club de recompensas EP!C !</h3>
-                      <img class="bandai-store-imagen" src="./assets/img/bandaiepicmerch.png" alt="Avatar">
-                      <div class="py-3">
-                        <a href=""> <button class="btn"> Ver tienda oficial</button></a>
-                      </div>
+                  <h2>Síguenos</h2>
+                  <h3>Forma parte de la comunidad.</h3>
+                  <div class="iconos-flex py-3">
+                    <div>
+                      <a
+                        href="https://www.facebook.com/bandainamcolatinoamerica/?brand_redir=233213603406398"
+                        target="_blank"
+                      >
+                        <img
+                          class="iconos-item"
+                          src="./assets/icons/face.png"
+                          alt="facebook"
+                          style="width: 100%"
+                        />
+                      </a>
+                      <a
+                        href="https://www.instagram.com/bandainamcous/"
+                        target="_blank"
+                      >
+                        <img
+                          class="iconos-item"
+                          src="./assets/icons/instagram.png"
+                          alt="instagram"
+                          style="width: 100%"
+                        />
+                      </a>
+                      <a
+                        href="https://twitter.com/bandainamcoeu/"
+                        target="_blank"
+                      >
+                        <img
+                          class="iconos-item"
+                          src="./assets/icons/twitter.png"
+                          alt="twitter"
+                          style="width: 100%"
+                        />
+                      </a>
+                      <a
+                        href="https://www.youtube.com/user/NamcoBandaiGamesEU"
+                        target="_blank"
+                      >
+                        <img
+                          class="iconos-item"
+                          src="./assets/icons/youtube.png"
+                          alt="youtube"
+                          style="width: 100%"
+                        />
+                      </a>
+                      <a
+                        href="https://discord.com/invite/eldenring"
+                        target="_blank"
+                      >
+                        <img
+                          class="iconos-item"
+                          src="./assets/icons/discord.png"
+                          alt="discord"
+                          style="width: 100%"
+                        />
+                      </a>
                     </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-    </section>
-    <!--section#5-->
-    <section>
-      <div class="bloque parallax cover-8" id="redesSociales"></div>
-      <div class="bloque">
-        <div class="container-fluid">
-          <div class="justify-content">
-            <div class="box1 px-1">
-              <div class="box-suscripto py-3 color-dorado">
-                <h2 class="">No te pierdas de ninguna noticia</h2>
-                <h3> Recibe las ultimas actualizaciones de tus juegos favoritos</h3>
-                <div class="py-3">
-                  <div class="text-center">
-                    <input class="input-suscribirse" type="text"> <button class="btn" type="button">ME SUSCRIBO!</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class=" box2 px-1 bg-dorado-transparent">
-              <div class="box-suscripto py-3 color-dorado">
-                <h2>Síguenos</h2>
-                <h3>Forma parte de la comunidad. </h3>
-                <div class="iconos-flex py-3">
-                  <div>
-                    <a href="">
-                      <img class="iconos-item " src="./assets/icons/face.png" alt="Avatar" style="width:100%">
-                    </a>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-    <footer class="text-center">Footer</footer>
+      </section>
+      <footer class="footer pie-pagina">
+        <div class="grupo-1">
+          <div class="box">
+            <figure>
+              <a href="#">
+                <img
+                  class="logo-footer"
+                  src="./assets/img/titlecel.jpg"
+                  alt="Elden Ring logo"
+                />
+              </a>
+            </figure>
+          </div>
+          <div class="box text-center">
+            <ul class="">
+              <li><a href="./index.html">Home</a></li>
+              <li><a href="./noticias.html">Noticias</a></li>
+              <li><a href="./historia.html">Historia</a></li>
+              <li><a href="./store.html">Store</a></li>
+              <li><a href="./requisitos.html">Requisitos</a></li>
+            </ul>
+          </div>
+          <div class="box text-center">
+            <h2>SIGUENOS</h2>
+            <div class="red-social">
+              <a
+                href="https://www.facebook.com/bandainamcolatinoamerica/?brand_redir=233213603406398"
+                target="_blank"
+                class="fa fa-facebook"
+              ></a>
+              <a
+                href="https://www.instagram.com/bandainamcous/"
+                target="_blank"
+                class="fa fa-instagram"
+              ></a>
+              <a
+                href="https://twitter.com/bandainamcoeu/"
+                target="_blank"
+                class="fa fa-twitter"
+              ></a>
+              <a
+                href="https://www.youtube.com/user/NamcoBandaiGamesEU"
+                target="_blank"
+                class="fa fa-youtube"
+              ></a>
+            </div>
+          </div>
+        </div>
+        <div class="grupo-2">
+          <small
+            >&copy; 2023 <b>Rolling Code</b> - Todos los Derechos
+            Reservados.</small
+          >
+        </div>
+      </footer>
     </main>
   </body>
   <script src="./js/index.js"></script>
+    <!--Iconos Fontawesome-->
+    <script
+    src="https://kit.fontawesome.com/eb496ab1a0.js"
+    crossorigin="anonymous"
+  ></script>
 </html>
